[gd_scene load_steps=4 format=3 uid="uid://b6e7kd4fv3oul"]

[ext_resource type="Script" path="res://src/UILayer.gd" id="1_13fow"]
[ext_resource type="PackedScene" uid="uid://dhk1x0kr7ux3a" path="res://src/widgets/menu_form.tscn" id="2_bq7bw"]
[ext_resource type="PackedScene" uid="uid://bj6vqwa0jekhb" path="res://src/widgets/game_form.tscn" id="3_2h3j3"]

[node name="UILayer" type="CanvasLayer"]
script = ExtResource("1_13fow")

[node name="MenuForm" parent="." instance=ExtResource("2_bq7bw")]
unique_name_in_owner = true

[node name="GameForm" parent="." instance=ExtResource("3_2h3j3")]
unique_name_in_owner = true
mouse_filter = 2

[connection signal="btn_new_game_pressed" from="MenuForm" to="." method="_on_menu_form_btn_new_game_pressed"]
[connection signal="btn_quit_pressed" from="MenuForm" to="." method="_on_menu_form_btn_quit_pressed"]
[connection signal="quit_pressed" from="GameForm" to="." method="_on_game_form_quit_pressed"]
[connection signal="retry_pressed" from="GameForm" to="." method="_on_game_form_retry_pressed"]
[connection signal="w_name_imput_popup_confirm" from="GameForm" to="." method="_on_game_form_w_name_imput_popup_confirm"]
